tests/cases/semantics/type_annotations/missing_struct_field_annotations.stderr
error: mismatching naming convention of fields within a struct
 --> $DIR/missing_struct_field_annotations.hash:8:5
7 |       // can be inferred or a type annotation.
8 |       bax := 4,
  |       ^^^^^^^^ this is expected to be a un-named field
9 |       bux: i32,
  = note: fields of a struct should all be named or all un-named

error: mismatching naming convention of fields within a struct
  --> $DIR/missing_struct_field_annotations.hash:9:5
 8 |       bax := 4,
 9 |       bux: i32,
   |       ^^^^^^^^ this is expected to be a un-named field
10 |       mux: i32 = 7,
   = note: fields of a struct should all be named or all un-named

error: mismatching naming convention of fields within a struct
  --> $DIR/missing_struct_field_annotations.hash:10:5
 9 |       bux: i32,
10 |       mux: i32 = 7,
   |       ^^^^^^^^^^^^ this is expected to be a un-named field
11 |   
   = note: fields of a struct should all be named or all un-named
